--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,9 @@
   %head
     %link{rel:"stylesheet", href:stylesheet_path("application")}
   %body
-    %p
-      awesome example.
+    %div{class:"jumbotron"}
+      %div{class:"container text-center"}
+        %a{ href: "https://github.com/yuchan/sinatra-boilerplate", class: "btn btn-info" }
+          View on Github
 
     %script{src:javascript_path("application")}
